--- a/app/src/main/res/layout/updatelayout.xml
+++ b/app/src/main/res/layout/updatelayout.xml
@@ -68,4 +68,12 @@
         android:textSize="20dp"
         android:background="#03A9F4"
         android:layout_marginTop="30dp"/>
+    <Button
+       
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Update"
+        android:textSize="20dp"
+        android:background="#03A9F4"
+        android:layout_marginTop="30dp"/>
 </LinearLayout>
